add photo to gallery page"

--- a/starter-code/pages/gallery.html
+++ b/starter-code/pages/gallery.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>NASA Gallery</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-
-  
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>NASA Gallery</title>
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<div class="container-gallery">
+			<h1>Gallery</h1>
+			<div class="collection">
+				<img src="/images/cluster.jpg" />
+				<img src="/images/coast.jpg" />
+				<img src="/images/moon-walk.jpg" />
+				<img src="/images/rocket.jpg" />
+				<img src="/images/crater-moon.jpg" />
+				<img src="/images/iss.jpg" />
+				<img src="/images/flag-moon.jpg" />
+				<img src="/images/faceshield.jpg" />
+			</div>
+		</div>
+	</body>
 </html>
